; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_STACK_to_r0.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/svp/extr_compiler.c_tr_STACK_to_r0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hostreg_r = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @tr_STACK_to_r0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tr_STACK_to_r0(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @EOP_SUB_IMM(i32 6, i32 6, i32 4, i32 32)
  %4 = call i32 @EOP_ADD_IMM(i32 1, i32 7, i32 12, i32 4)
  %5 = call i32 @EOP_ADD_IMM(i32 1, i32 1, i32 0, i32 72)
  %6 = call i32 @EOP_ADD_REG_LSR(i32 1, i32 1, i32 6, i32 28)
  %7 = call i32 @EOP_LDRH_SIMPLE(i32 0, i32 1)
  %8 = load i32*, i32** @hostreg_r, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 -1, i32* %9, align 4
  %10 = load i32*, i32** @hostreg_r, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 -1, i32* %11, align 4
  ret void
}

declare dso_local i32 @EOP_SUB_IMM(i32, i32, i32, i32) #1

declare dso_local i32 @EOP_ADD_IMM(i32, i32, i32, i32) #1

declare dso_local i32 @EOP_ADD_REG_LSR(i32, i32, i32, i32) #1

declare dso_local i32 @EOP_LDRH_SIMPLE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
